--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -161,6 +161,7 @@ h1, h2, h3, h4, h5, h6 {
         transition: padding 0.3s;
         border: none;
         .navbar-brand {
+            margin-top: -4px;
             font-size: 2em;
             -webkit-transition: all 0.3s;
             -moz-transition: all 0.3s;
@@ -249,6 +250,9 @@ section {
     background-size: cover;
     background-attachment: fixed;
     padding: 50px 0;
+    h1.hero-claim {
+      margin-bottom: 50px;
+    }
     h2.section-heading {
         text-align: left;
         font-size: 40px;
@@ -264,12 +268,14 @@ section {
         text-transform: none;
         margin-bottom: 75px;
     }
-    margin-bottom: 20px;
+    &.section-dark {
+        background-color: $gray-lighter;
+    }
 }
 
 @media(min-width:768px) {
     section {
-        padding: 50px 0;
+        padding: 80px 0 50px;
     }
 }
 
@@ -319,8 +325,8 @@ section {
                     h4 {
                         margin: 0;
                     }
-                }                
-            }            
+                }
+            }
         }
         .portfolio-caption {
             max-width: 400px;
@@ -617,7 +623,7 @@ section#contact {
        font-weight: 700;
        color: $gray-lighter;
     }
-    :-ms-input-placeholder {  
+    :-ms-input-placeholder {
        @include heading-font;
        font-weight: 700;
        color: $gray-lighter;
@@ -631,6 +637,7 @@ section#contact {
 
 footer {
     padding: 25px 0;
+    background-color: $gray-dark;
     span.copyright {
         line-height: 40px;
         @include heading-font;
@@ -745,8 +752,8 @@ ul.social-buttons {
                 -webkit-transform: rotate(90deg);
                 /* Safari and Chrome */
                 z-index:1052;
-            }            
-        }        
+            }
+        }
     }
     .modal-backdrop {
         opacity: 0;
@@ -817,6 +824,9 @@ body {
     }
 }
 
+.call-to-action {
+    margin-top: 4rem;
+}
 
 @media (min-width: 768px) {
 .container {
